--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -5,11 +5,281 @@
 @include main;
 
 header {
-  min-height: 130px;
+  @include wrapper(1110, 30);
+  height: 130px;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  background-color: #ffffff;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  position: fixed;
+  transition: all 1s ease-in-out;
+  @include media-max-width(750) {
+    &:before {
+      content: "";
+      height: 0;
+      width: 0;
+      background: rgba($color: $veryDarkBlue, $alpha: 0.9);
+      top: 0;
+      left: 50%;
+      right: 0;
+      bottom: 0;
+      opacity: 0;
+      position: absolute;
+      transition: 1s all;
+      transform: scale(0);
+      transform-origin: top center;
+    }
+  }
+
+  &.sticky {
+    height: 80px;
+    transition: all 1s ease-in-out;
+    z-index: 50;
+    background-color: lighten($color: $primary_clr, $amount: 10%);
+    min-width: 100%;
+    padding: 0 11.5%;
+    box-shadow: 2px 7px 10px -4px rgba(0, 0, 0, 0.75);
+    @include media-max-width(800) {
+      height: 60px;
+      padding: 15px;
+    }
+
+    .menu-btn {
+      &__burger::before,
+      &__burger::after {
+        background: $secondary_clr !important;
+      }
+    }
+
+    .right {
+      top: 80px;
+    }
+  }
+
+  &.overlay {
+    @include media-max-width(750) {
+      &:before {
+        content: "";
+        height: 100vh;
+        width: 100vw;
+        background: rgba($color: $veryDarkBlue, $alpha: 0.9);
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        transform: scale(1);
+        opacity: 1;
+        transform-origin: top;
+      }
+    }
+  }
+
+  .left {
+    .main-logo {
+      @include media-max-width(750) {
+        transition: filter 1s;
+        filter: invert(1) brightness(10);
+      }
+    }
+  }
+
+  .menu-btn {
+    position: relative;
+    margin-left: auto;
+    justify-content: right;
+    align-items: center;
+    width: 25px;
+    height: 12px;
+    cursor: pointer;
+    transition: all 0.5s ease-in-out;
+    display: none;
+    > * {
+      cursor: pointer;
+    }
+
+    @include media-max-width(750) {
+      display: flex;
+    }
+
+    &__burger {
+      position: absolute;
+      left: 12%;
+      width: 18px;
+      height: 3px;
+      background: rgba($color: $veryDarkBlue, $alpha: 1);
+      transition: all 0.5s ease-in-out;
+    }
+
+    &__burger::before,
+    &__burger::after {
+      content: "";
+      position: absolute;
+      width: 18px;
+      left: -0%;
+      height: 3px;
+      background: rgba($color: $veryDarkBlue, $alpha: 1);
+      transition: all 0.5s ease-in-out;
+    }
+
+    &__burger::before {
+      transform: translateY(-6px);
+    }
+
+    &__burger::after {
+      transform: translateY(6px);
+    }
+
+    &.open .menu-btn__burger {
+      transform: translateX(55px);
+      background: transparent;
+      box-shadow: none;
+      background: #ffffff;
+    }
+
+    &.open .menu-btn__burger::before {
+      transform: rotate(45deg) translate(-35px, 35px);
+      background: #ffffff;
+    }
+    &.open .menu-btn__burger::after {
+      transform: rotate(-45deg) translate(-35px, -35px);
+      background: #ffffff;
+    }
+  }
+
+  .right {
+    @include media-max-width(750) {
+      min-height: 0vh;
+      transition: 1s all;
+      padding: 0px;
+      z-index: 50;
+      transform: scale(0);
+      transform-origin: top;
+      position: absolute;
+      top: 130px;
+      left: 30px;
+      width: calc(100% - 60px);
+    }
+
+    &.showing {
+      @include media-max-width(750) {
+        height: calc(100vh - 130px);
+        transition: 2s all;
+        z-index: 50;
+        transform: scale(1);
+        transform-origin: top;
+      }
+    }
+
+    &__top-nav {
+      @include media-max-width(750) {
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        justify-content: space-between;
+      }
+    }
+
+    &__list {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      font-weight: 500;
+      @include media-max-width(750) {
+        flex-direction: column;
+      }
+    }
+
+    &__list-item {
+      margin-left: 50px;
+      text-transform: uppercase;
+      font-weight: 400;
+      letter-spacing: 3px;
+
+      a {
+        color: $veryDarkBlue;
+        @include media-max-width(750) {
+          color: #ffffff;
+        }
+
+        &:hover {
+          color: $secondary_clr;
+        }
+      }
+
+      @include media-max-width(750) {
+        margin-left: 0;
+        padding: 25px 0;
+        width: 100%;
+        text-align: center;
+        border-top: 1px solid rgba($color: #fff, $alpha: 0.5);
+
+        &:nth-last-child(2) {
+          border-bottom: 1px solid rgba($color: #fff, $alpha: 0.5);
+        }
+      }
+    }
+
+    .btn-secondary {
+      background-color: $secondary_clr;
+      border: 2px solid $secondary_clr;
+      border-radius: 5px;
+
+      @include media-max-width(750) {
+        background-color: transparent;
+        border: 2px solid #ffffff;
+        width: 100%;
+        padding: 16px 0;
+        margin-top: 25px;
+      }
+
+      .login {
+        color: #ffffff;
+        font-weight: 500;
+      }
+
+      &:hover {
+        background-color: #ffffff;
+        border: 2px solid $secondary_clr;
+        box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
+
+        @include media-max-width(750) {
+          background-color: transparent;
+        }
+        .login {
+          color: $secondary_clr;
+        }
+      }
+    }
+
+    &__social-icons {
+      display: none;
+      @include media-max-width(750) {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        margin-bottom: 45px;
+      }
+    }
+
+    li {
+      margin: 0 18px;
+    }
+
+    &__social-icon {
+      color: #ffffff;
+    }
+  }
 }
 
 main {
-  height: 200px;
+  height: 2000px;
+  background-image: url(../svg/illustration-hero.svg);
+  margin-top: 130px;
 }
 
 footer {
