--- a/css/style.css
+++ b/css/style.css
@@ -20,12 +20,12 @@ html {
   font-family: "Rubik", sans-serif, "Gilroy", cursive, Verdana, Geneva, Tahoma, sans-serif;
 }
 
-/* line 9, src/sass/components/_mixins.scss */
+/* line 8, src/sass/components/_mixins.scss */
 body {
   font-size: 18px;
 }
 
-/* line 13, src/sass/components/_mixins.scss */
+/* line 12, src/sass/components/_mixins.scss */
 *,
 *:before,
 *:after {
@@ -35,60 +35,458 @@ body {
   margin: 0;
 }
 
-/* line 21, src/sass/components/_mixins.scss */
+/* line 20, src/sass/components/_mixins.scss */
 ul,
 ol {
   list-style: none;
 }
 
-/* line 26, src/sass/components/_mixins.scss */
+/* line 25, src/sass/components/_mixins.scss */
 a {
   text-decoration: none;
 }
 
-/* line 30, src/sass/components/_mixins.scss */
-.btn {
-  border: 1px solid #5368df;
-  color: #5368df;
-  padding: 10px 20px;
+/* line 29, src/sass/components/_mixins.scss */
+.btn-primary {
+  border: 2px solid #5368df;
+  padding: 18px 25px;
+}
+
+/* line 33, src/sass/components/_mixins.scss */
+.btn-secondary {
+  border: 2px solid #fa5757;
+  padding: 16px 35px;
+}
+
+/* line 37, src/sass/components/_mixins.scss */
+.btn-primary,
+.btn-secondary {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 20px;
   cursor: pointer;
+  color: #ffffff;
 }
 
 /* line 7, src/sass/style.scss */
 header {
-  min-height: 130px;
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 0 30px;
+  height: 130px;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  background-color: #ffffff;
+  top: 0;
+  left: 50%;
+  -webkit-transform: translateX(-50%);
+          transform: translateX(-50%);
+  position: fixed;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
 }
 
-/* line 11, src/sass/style.scss */
+@media (max-width: 750px) {
+  /* line 21, src/sass/style.scss */
+  header:before {
+    content: "";
+    height: 0;
+    width: 0;
+    background: rgba(37, 43, 70, 0.9);
+    top: 0;
+    left: 50%;
+    right: 0;
+    bottom: 0;
+    opacity: 0;
+    position: absolute;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transform-origin: top center;
+            transform-origin: top center;
+  }
+}
+
+/* line 38, src/sass/style.scss */
+header.sticky {
+  height: 80px;
+  -webkit-transition: all 1s ease-in-out;
+  transition: all 1s ease-in-out;
+  z-index: 50;
+  background-color: #7e8ee7;
+  min-width: 100%;
+  padding: 0 11.5%;
+  -webkit-box-shadow: 2px 7px 10px -4px rgba(0, 0, 0, 0.75);
+          box-shadow: 2px 7px 10px -4px rgba(0, 0, 0, 0.75);
+}
+
+@media (max-width: 800px) {
+  /* line 38, src/sass/style.scss */
+  header.sticky {
+    height: 60px;
+    padding: 15px;
+  }
+}
+
+/* line 52, src/sass/style.scss */
+header.sticky .menu-btn__burger::before, header.sticky .menu-btn__burger::after {
+  background: #fa5757 !important;
+}
+
+/* line 58, src/sass/style.scss */
+header.sticky .right {
+  top: 80px;
+}
+
+@media (max-width: 750px) {
+  /* line 65, src/sass/style.scss */
+  header.overlay:before {
+    content: "";
+    height: 100vh;
+    width: 100vw;
+    background: rgba(37, 43, 70, 0.9);
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    opacity: 1;
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+}
+
+@media (max-width: 750px) {
+  /* line 83, src/sass/style.scss */
+  header .left .main-logo {
+    -webkit-transition: -webkit-filter 1s;
+    transition: -webkit-filter 1s;
+    transition: filter 1s;
+    transition: filter 1s, -webkit-filter 1s;
+    -webkit-filter: invert(1) brightness(10);
+            filter: invert(1) brightness(10);
+  }
+}
+
+/* line 91, src/sass/style.scss */
+header .menu-btn {
+  position: relative;
+  margin-left: auto;
+  -webkit-box-pack: right;
+      -ms-flex-pack: right;
+          justify-content: right;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  width: 25px;
+  height: 12px;
+  cursor: pointer;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+  display: none;
+}
+
+/* line 101, src/sass/style.scss */
+header .menu-btn > * {
+  cursor: pointer;
+}
+
+@media (max-width: 750px) {
+  /* line 91, src/sass/style.scss */
+  header .menu-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+}
+
+/* line 109, src/sass/style.scss */
+header .menu-btn__burger {
+  position: absolute;
+  left: 12%;
+  width: 18px;
+  height: 3px;
+  background: #252b46;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+/* line 118, src/sass/style.scss */
+header .menu-btn__burger::before, header .menu-btn__burger::after {
+  content: "";
+  position: absolute;
+  width: 18px;
+  left: -0%;
+  height: 3px;
+  background: #252b46;
+  -webkit-transition: all 0.5s ease-in-out;
+  transition: all 0.5s ease-in-out;
+}
+
+/* line 129, src/sass/style.scss */
+header .menu-btn__burger::before {
+  -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+}
+
+/* line 133, src/sass/style.scss */
+header .menu-btn__burger::after {
+  -webkit-transform: translateY(6px);
+          transform: translateY(6px);
+}
+
+/* line 137, src/sass/style.scss */
+header .menu-btn.open .menu-btn__burger {
+  -webkit-transform: translateX(55px);
+          transform: translateX(55px);
+  background: transparent;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+  background: #ffffff;
+}
+
+/* line 144, src/sass/style.scss */
+header .menu-btn.open .menu-btn__burger::before {
+  -webkit-transform: rotate(45deg) translate(-35px, 35px);
+          transform: rotate(45deg) translate(-35px, 35px);
+  background: #ffffff;
+}
+
+/* line 148, src/sass/style.scss */
+header .menu-btn.open .menu-btn__burger::after {
+  -webkit-transform: rotate(-45deg) translate(-35px, -35px);
+          transform: rotate(-45deg) translate(-35px, -35px);
+  background: #ffffff;
+}
+
+@media (max-width: 750px) {
+  /* line 154, src/sass/style.scss */
+  header .right {
+    min-height: 0vh;
+    -webkit-transition: 1s all;
+    transition: 1s all;
+    padding: 0px;
+    z-index: 50;
+    -webkit-transform: scale(0);
+            transform: scale(0);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+    position: absolute;
+    top: 130px;
+    left: 30px;
+    width: calc(100% - 60px);
+  }
+}
+
+@media (max-width: 750px) {
+  /* line 168, src/sass/style.scss */
+  header .right.showing {
+    height: calc(100vh - 130px);
+    -webkit-transition: 2s all;
+    transition: 2s all;
+    z-index: 50;
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    -webkit-transform-origin: top;
+            transform-origin: top;
+  }
+}
+
+@media (max-width: 750px) {
+  /* line 178, src/sass/style.scss */
+  header .right__top-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    height: 100%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+}
+
+/* line 187, src/sass/style.scss */
+header .right__list {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  font-weight: 500;
+}
+
+@media (max-width: 750px) {
+  /* line 187, src/sass/style.scss */
+  header .right__list {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+/* line 197, src/sass/style.scss */
+header .right__list-item {
+  margin-left: 50px;
+  text-transform: uppercase;
+  font-weight: 400;
+  letter-spacing: 3px;
+}
+
+/* line 203, src/sass/style.scss */
+header .right__list-item a {
+  color: #252b46;
+}
+
+@media (max-width: 750px) {
+  /* line 203, src/sass/style.scss */
+  header .right__list-item a {
+    color: #ffffff;
+  }
+}
+
+/* line 209, src/sass/style.scss */
+header .right__list-item a:hover {
+  color: #fa5757;
+}
+
+@media (max-width: 750px) {
+  /* line 197, src/sass/style.scss */
+  header .right__list-item {
+    margin-left: 0;
+    padding: 25px 0;
+    width: 100%;
+    text-align: center;
+    border-top: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  /* line 221, src/sass/style.scss */
+  header .right__list-item:nth-last-child(2) {
+    border-bottom: 1px solid rgba(255, 255, 255, 0.5);
+  }
+}
+
+/* line 227, src/sass/style.scss */
+header .right .btn-secondary {
+  background-color: #fa5757;
+  border: 2px solid #fa5757;
+  border-radius: 5px;
+}
+
+@media (max-width: 750px) {
+  /* line 227, src/sass/style.scss */
+  header .right .btn-secondary {
+    background-color: transparent;
+    border: 2px solid #ffffff;
+    width: 100%;
+    padding: 16px 0;
+    margin-top: 25px;
+  }
+}
+
+/* line 240, src/sass/style.scss */
+header .right .btn-secondary .login {
+  color: #ffffff;
+  font-weight: 500;
+}
+
+/* line 245, src/sass/style.scss */
+header .right .btn-secondary:hover {
+  background-color: #ffffff;
+  border: 2px solid #fa5757;
+  -webkit-box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
+}
+
+@media (max-width: 750px) {
+  /* line 245, src/sass/style.scss */
+  header .right .btn-secondary:hover {
+    background-color: transparent;
+  }
+}
+
+/* line 253, src/sass/style.scss */
+header .right .btn-secondary:hover .login {
+  color: #fa5757;
+}
+
+/* line 259, src/sass/style.scss */
+header .right__social-icons {
+  display: none;
+}
+
+@media (max-width: 750px) {
+  /* line 259, src/sass/style.scss */
+  header .right__social-icons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 45px;
+  }
+}
+
+/* line 269, src/sass/style.scss */
+header .right li {
+  margin: 0 18px;
+}
+
+/* line 273, src/sass/style.scss */
+header .right__social-icon {
+  color: #ffffff;
+}
+
+/* line 279, src/sass/style.scss */
 main {
-  height: 200px;
+  height: 2000px;
+  background-image: url(../svg/illustration-hero.svg);
+  margin-top: 130px;
 }
 
-/* line 15, src/sass/style.scss */
+/* line 285, src/sass/style.scss */
 footer {
   min-height: 90px;
   background-color: #252b46;
 }
 
-/* line 19, src/sass/style.scss */
+/* line 289, src/sass/style.scss */
 footer .attribution {
   color: #ffffff;
   text-align: center;
   padding: 25px;
 }
 
-/* line 23, src/sass/style.scss */
+/* line 293, src/sass/style.scss */
 footer .attribution a,
 footer .attribution a:visited,
 footer .attribution a:active {
   color: #fa5757;
 }
 
-/* line 28, src/sass/style.scss */
+/* line 298, src/sass/style.scss */
 footer .attribution a:hover,
 footer .attribution a:visited:hover,
 footer .attribution a:active:hover {
