--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -56,7 +56,7 @@ header {
     }
 
     .right {
-      top: 80px;
+      top: 60px;
     }
   }
 
@@ -202,6 +202,8 @@ header {
 
       a {
         color: $veryDarkBlue;
+        font-size: 12px;
+        transition: 0.5s ease-in-out;
         @include media-max-width(750) {
           color: #ffffff;
         }
@@ -225,10 +227,6 @@ header {
     }
 
     .btn-secondary {
-      background-color: $secondary_clr;
-      border: 2px solid $secondary_clr;
-      border-radius: 5px;
-
       @include media-max-width(750) {
         background-color: transparent;
         border: 2px solid #ffffff;
@@ -243,15 +241,13 @@ header {
       }
 
       &:hover {
-        background-color: #ffffff;
-        border: 2px solid $secondary_clr;
-        box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
-
         @include media-max-width(750) {
           background-color: transparent;
+          border: 2px solid $secondary_clr;
         }
         .login {
           color: $secondary_clr;
+          transition: 0.5s ease-in-out;
         }
       }
     }
@@ -264,22 +260,125 @@ header {
         align-items: center;
         margin-bottom: 45px;
       }
-    }
 
-    li {
-      margin: 0 18px;
+      & li {
+        margin: 0 18px;
+      }
     }
 
     &__social-icon {
       color: #ffffff;
+      transition: 0.5s ease-in-out;
+
+      &:hover {
+        color: $secondary_clr;
+      }
     }
   }
 }
 
 main {
-  height: 2000px;
-  background-image: url(../svg/illustration-hero.svg);
+  min-height: 630px;
   margin-top: 130px;
+
+  .hero {
+    position: relative;
+    overflow: hidden;
+
+    &::after {
+      content: "";
+      position: absolute;
+      width: 45%;
+      height: 100%;
+      max-height: 350px;
+      min-height: 200px;
+      bottom: 70px;
+      right: 0;
+      z-index: -10;
+      background-color: $primary_clr;
+      border-radius: 150px 0 0 150px;
+
+      @include media-max-width(750) {
+        top: 12vw;
+        bottom: unset;
+        max-height: 200px;
+        width: 70%;
+      }
+    }
+    &__container {
+      @include wrapper(1110, 30);
+      display: flex;
+      justify-content: space-between;
+      align-items: baseline;
+      min-height: 620px;
+
+      @include media-max-width(750) {
+        flex-direction: column-reverse;
+      }
+    }
+
+    &__left {
+      width: 45%;
+      margin-top: 12%;
+      align-self: flex-start;
+      @include media-max-width(750) {
+        width: 100%;
+        margin-top: 50px;
+        text-align: center;
+      }
+    }
+
+    &__right {
+      width: 45%;
+      position: relative;
+      min-height: 485px;
+      top: 65px;
+      @include media-max-width(750) {
+        width: 100%;
+        min-height: 260px;
+        top: unset;
+      }
+    }
+
+    &__title {
+      font-size: 40px;
+      font-weight: 500;
+      margin-bottom: 30px;
+      @include media-max-width(750) {
+        font-size: 32px;
+      }
+    }
+
+    &__text {
+      color: $grayishBlue;
+      font-size: 16px;
+      line-height: 22px;
+      margin-bottom: 30px;
+    }
+
+    &__img {
+      position: absolute;
+      max-width: 100%;
+      bottom: 100px;
+      transform: scale(1.4);
+      z-index: -1;
+      @include media-max-width(750) {
+        transform: scale(1);
+        bottom: unset;
+      }
+    }
+
+    &__buttons {
+      @include media-max-width(750) {
+        display: flex;
+        justify-content: space-between;
+        & > button {
+          width: 47%;
+          padding: 16px;
+        }
+      }
+    }
+  }
 }
 
 footer {
