--- a/css/style.css
+++ b/css/style.css
@@ -49,23 +49,66 @@ a {
 /* line 29, src/sass/components/_mixins.scss */
 .btn-primary {
   border: 2px solid #5368df;
-  padding: 18px 25px;
+  background-color: #5368df;
+  padding: 16px 25px;
+  color: #ffffff;
+  border: 2px solid #5368df;
+}
+
+/* line 128, src/sass/components/_mixins.scss */
+.btn-primary:hover {
+  border: 2px solid #5368df;
+  color: #5368df;
+  background-color: #ffffff;
 }
 
 /* line 33, src/sass/components/_mixins.scss */
 .btn-secondary {
   border: 2px solid #fa5757;
-  padding: 16px 35px;
+  background-color: #fa5757;
+  padding: 8px 35px;
+  color: #ffffff;
+}
+
+/* line 141, src/sass/components/_mixins.scss */
+.btn-secondary:hover {
+  background-color: #ffffff;
+  border: 2px solid #fa5757;
+  -webkit-box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
 }
 
 /* line 37, src/sass/components/_mixins.scss */
+.btn-tertiary {
+  -webkit-box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
+          box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
+  padding: 16px 25px;
+  color: #9194a1;
+  border: none;
+  background-color: #ffffff;
+  border: 2px solid #ffffff;
+}
+
+/* line 155, src/sass/components/_mixins.scss */
+.btn-tertiary:hover {
+  border: 2px solid #252b46;
+  color: #252b46;
+  -webkit-box-shadow: none;
+          box-shadow: none;
+}
+
+/* line 41, src/sass/components/_mixins.scss */
 .btn-primary,
-.btn-secondary {
+.btn-secondary,
+.btn-tertiary {
   text-align: center;
   text-decoration: none;
   display: inline-block;
   cursor: pointer;
-  color: #ffffff;
+  border-radius: 5px;
+  font-weight: 600;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 /* line 7, src/sass/style.scss */
@@ -144,7 +187,7 @@ header.sticky .menu-btn__burger::before, header.sticky .menu-btn__burger::after 
 
 /* line 58, src/sass/style.scss */
 header.sticky .right {
-  top: 80px;
+  top: 60px;
 }
 
 @media (max-width: 750px) {
@@ -355,6 +398,9 @@ header .right__list-item {
 /* line 203, src/sass/style.scss */
 header .right__list-item a {
   color: #252b46;
+  font-size: 12px;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
 @media (max-width: 750px) {
@@ -364,7 +410,7 @@ header .right__list-item a {
   }
 }
 
-/* line 209, src/sass/style.scss */
+/* line 211, src/sass/style.scss */
 header .right__list-item a:hover {
   color: #fa5757;
 }
@@ -378,21 +424,14 @@ header .right__list-item a:hover {
     text-align: center;
     border-top: 1px solid rgba(255, 255, 255, 0.5);
   }
-  /* line 221, src/sass/style.scss */
+  /* line 223, src/sass/style.scss */
   header .right__list-item:nth-last-child(2) {
     border-bottom: 1px solid rgba(255, 255, 255, 0.5);
   }
 }
 
-/* line 227, src/sass/style.scss */
-header .right .btn-secondary {
-  background-color: #fa5757;
-  border: 2px solid #fa5757;
-  border-radius: 5px;
-}
-
 @media (max-width: 750px) {
-  /* line 227, src/sass/style.scss */
+  /* line 229, src/sass/style.scss */
   header .right .btn-secondary {
     background-color: transparent;
     border: 2px solid #ffffff;
@@ -402,39 +441,34 @@ header .right .btn-secondary {
   }
 }
 
-/* line 240, src/sass/style.scss */
+/* line 238, src/sass/style.scss */
 header .right .btn-secondary .login {
   color: #ffffff;
   font-weight: 500;
 }
 
-/* line 245, src/sass/style.scss */
-header .right .btn-secondary:hover {
-  background-color: #ffffff;
-  border: 2px solid #fa5757;
-  -webkit-box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
-          box-shadow: 0px 8px 15px -10px rgba(0, 0, 0, 0.75);
-}
-
 @media (max-width: 750px) {
-  /* line 245, src/sass/style.scss */
+  /* line 243, src/sass/style.scss */
   header .right .btn-secondary:hover {
     background-color: transparent;
+    border: 2px solid #fa5757;
   }
 }
 
-/* line 253, src/sass/style.scss */
+/* line 248, src/sass/style.scss */
 header .right .btn-secondary:hover .login {
   color: #fa5757;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
-/* line 259, src/sass/style.scss */
+/* line 255, src/sass/style.scss */
 header .right__social-icons {
   display: none;
 }
 
 @media (max-width: 750px) {
-  /* line 259, src/sass/style.scss */
+  /* line 255, src/sass/style.scss */
   header .right__social-icons {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -449,44 +483,200 @@ header .right__social-icons {
   }
 }
 
-/* line 269, src/sass/style.scss */
-header .right li {
+/* line 264, src/sass/style.scss */
+header .right__social-icons li {
   margin: 0 18px;
 }
 
-/* line 273, src/sass/style.scss */
+/* line 269, src/sass/style.scss */
 header .right__social-icon {
   color: #ffffff;
+  -webkit-transition: 0.5s ease-in-out;
+  transition: 0.5s ease-in-out;
 }
 
-/* line 279, src/sass/style.scss */
+/* line 273, src/sass/style.scss */
+header .right__social-icon:hover {
+  color: #fa5757;
+}
+
+/* line 280, src/sass/style.scss */
 main {
-  height: 2000px;
-  background-image: url(../svg/illustration-hero.svg);
+  min-height: 630px;
   margin-top: 130px;
 }
 
-/* line 285, src/sass/style.scss */
+/* line 284, src/sass/style.scss */
+main .hero {
+  position: relative;
+  overflow: hidden;
+}
+
+/* line 288, src/sass/style.scss */
+main .hero::after {
+  content: "";
+  position: absolute;
+  width: 45%;
+  height: 100%;
+  max-height: 350px;
+  min-height: 200px;
+  bottom: 70px;
+  right: 0;
+  z-index: -10;
+  background-color: #5368df;
+  border-radius: 150px 0 0 150px;
+}
+
+@media (max-width: 750px) {
+  /* line 288, src/sass/style.scss */
+  main .hero::after {
+    top: 12vw;
+    bottom: unset;
+    max-height: 200px;
+    width: 70%;
+  }
+}
+
+/* line 308, src/sass/style.scss */
+main .hero__container {
+  max-width: 1110px;
+  margin: 0 auto;
+  padding: 0 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: baseline;
+      -ms-flex-align: baseline;
+          align-items: baseline;
+  min-height: 620px;
+}
+
+@media (max-width: 750px) {
+  /* line 308, src/sass/style.scss */
+  main .hero__container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: column-reverse;
+            flex-direction: column-reverse;
+  }
+}
+
+/* line 320, src/sass/style.scss */
+main .hero__left {
+  width: 45%;
+  margin-top: 12%;
+  -ms-flex-item-align: start;
+      align-self: flex-start;
+}
+
+@media (max-width: 750px) {
+  /* line 320, src/sass/style.scss */
+  main .hero__left {
+    width: 100%;
+    margin-top: 50px;
+    text-align: center;
+  }
+}
+
+/* line 331, src/sass/style.scss */
+main .hero__right {
+  width: 45%;
+  position: relative;
+  min-height: 485px;
+  top: 65px;
+}
+
+@media (max-width: 750px) {
+  /* line 331, src/sass/style.scss */
+  main .hero__right {
+    width: 100%;
+    min-height: 260px;
+    top: unset;
+  }
+}
+
+/* line 343, src/sass/style.scss */
+main .hero__title {
+  font-size: 40px;
+  font-weight: 500;
+  margin-bottom: 30px;
+}
+
+@media (max-width: 750px) {
+  /* line 343, src/sass/style.scss */
+  main .hero__title {
+    font-size: 32px;
+  }
+}
+
+/* line 352, src/sass/style.scss */
+main .hero__text {
+  color: #9194a1;
+  font-size: 16px;
+  line-height: 22px;
+  margin-bottom: 30px;
+}
+
+/* line 359, src/sass/style.scss */
+main .hero__img {
+  position: absolute;
+  max-width: 100%;
+  bottom: 100px;
+  -webkit-transform: scale(1.4);
+          transform: scale(1.4);
+  z-index: -1;
+}
+
+@media (max-width: 750px) {
+  /* line 359, src/sass/style.scss */
+  main .hero__img {
+    -webkit-transform: scale(1);
+            transform: scale(1);
+    bottom: unset;
+  }
+}
+
+@media (max-width: 750px) {
+  /* line 371, src/sass/style.scss */
+  main .hero__buttons {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  /* line 375, src/sass/style.scss */
+  main .hero__buttons > button {
+    width: 47%;
+    padding: 16px;
+  }
+}
+
+/* line 384, src/sass/style.scss */
 footer {
   min-height: 90px;
   background-color: #252b46;
 }
 
-/* line 289, src/sass/style.scss */
+/* line 388, src/sass/style.scss */
 footer .attribution {
   color: #ffffff;
   text-align: center;
   padding: 25px;
 }
 
-/* line 293, src/sass/style.scss */
+/* line 392, src/sass/style.scss */
 footer .attribution a,
 footer .attribution a:visited,
 footer .attribution a:active {
   color: #fa5757;
 }
 
-/* line 298, src/sass/style.scss */
+/* line 397, src/sass/style.scss */
 footer .attribution a:hover,
 footer .attribution a:visited:hover,
 footer .attribution a:active:hover {
