--- a/src/sass/components/_mixins.scss
+++ b/src/sass/components/_mixins.scss
@@ -26,8 +26,14 @@
     text-decoration: none;
   }
 
+  h2,
+  h3 {
+    font-weight: 500;
+  }
+
   p {
     color: $grayishBlue;
+    line-height: 26px;
   }
 
   .btn-primary {
