--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -728,6 +728,129 @@ main {
       margin: 0 auto;
     }
   }
+
+  .contact {
+    background-color: $primary_clr;
+    padding: 50px 0;
+    &__container {
+      @include wrapper(450, 30);
+      text-align: center;
+      color: #ffffff;
+      display: flex;
+      flex-direction: column;
+    }
+
+    &__small-text {
+      text-transform: uppercase;
+      margin-bottom: 40px;
+      letter-spacing: 6px;
+      font-size: 12px;
+    }
+
+    &__title {
+      margin-bottom: 38px;
+    }
+
+    &__form {
+      display: flex;
+      width: 100%;
+      justify-content: space-between;
+      position: relative;
+
+      @include media-max-width(750) {
+        flex-direction: column;
+      }
+    }
+
+    &__form.error {
+      &::after {
+        position: absolute;
+        content: "";
+        height: 68px;
+        width: 270px;
+        background-color: #fa5757;
+        color: #ffffff;
+        bottom: -21px;
+        left: 0px;
+        font-style: italic;
+        font-size: 10px;
+        border-radius: 5px;
+
+        @include media-max-width(750) {
+          width: inherit;
+          top: 0px;
+          height: 65px;
+        }
+      }
+    }
+
+    &__error-message {
+      color: #ffffff;
+      position: absolute;
+      bottom: -16px;
+      left: 12px;
+      font-style: italic;
+      visibility: hidden;
+      font-size: 10px;
+    }
+
+    &__error-message.error {
+      visibility: visible;
+      z-index: 10;
+      @include media-max-width(750) {
+        top: 48px;
+      }
+    }
+
+    &__input {
+      max-width: 300px;
+      padding: 0 20px;
+      border-radius: 5px;
+      outline: none;
+      border: none;
+      flex-grow: 1;
+      margin-right: 18px;
+      border: 2px solid transparent;
+      z-index: 10;
+      min-height: 45px;
+      @include media-max-width(750) {
+        max-width: 100%;
+        margin-right: 0;
+        margin-bottom: 16px;
+      }
+
+      &::placeholder {
+        color: $grayishBlue;
+      }
+
+      &:focus {
+        outline: 0;
+        border: 1px solid $grayishBlue;
+        background-color: rgba($color: #ffffff, $alpha: 0.2);
+        color: #ffffff;
+      }
+
+      &:focus::placeholder {
+        color: #ffffff;
+      }
+    }
+
+    &__input.error {
+      border: 2px solid $secondary_clr;
+
+      @include media-max-width(750) {
+        margin-bottom: 36px;
+      }
+    }
+
+    &__input.success {
+      border: 2px solid greenyellow;
+    }
+
+    &__btn {
+      padding: 14px;
+    }
+  }
 }
 
 footer {
